--- a/app/views/token_generate/weak.html.erb
+++ b/app/views/token_generate/weak.html.erb
@@ -1,2 +1,3 @@
 <h1>Token Demo</h1>
 <p><%= @token %></p>
+<%= button_to  "Back to Login", login_path, :class => "btn btn-primary", :method => "get" %>
